--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 <!-- Esto es un mensaje para mis alumnos favoritos -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Charlie</title>
+</head>
+<body>
+<h1>Hola soy Charly</h1>
+</body>
+</html>
